# HollowAtlas

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
hollowatlas/: __init__.py  cli.py
hollowatlas/core/: __init__.py  atlas_writer.py  extrude.py  manifest.py  maxrects.py  packer.py  scanner.py  trim.py  types.py
hollowatlas/gui/: __init__.py  app.py  atlas_preview.py  file_tree.py  log_panel.py  options_panel.py
scripts/: copy-release.js
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/core/: atlas_writer.rs  extrude.rs  manifest.rs  maxrects.rs  mod.rs  packer.rs  scanner.rs  trim.rs  types.rs
tests/: rust_core.rs  test_maxrects.py  test_pack_folder.py  test_trim_extrude.py
ui/: index.html  vite.config.ts
ui/src/: main.tsx  styles.css  types.ts
