[package]
name = "hollowatlas"
version = "0.1.0"
edition = "2021"
description = "Rust texture atlas packer with tileset-friendly grid workflows."

[lib]
name = "hollowatlas"
path = "src/lib.rs"

[[bin]]
name = "hollowatlas"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
