[package]
name = "hollowatlas-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
hollowatlas = { path = ".." }

[[bin]]
name = "hollowatlas-gui"
path = "src/main.rs"
